k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flag-guessing-game
  labels:
    name: flag-guessing-game
    app: flag-guessing-game
